--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "@planetrenox/html",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,7 @@
   "dependencies": {
   },
   "devDependencies": {
-    "esbuild": "^0.20.0"
+    
   },
   "engines": {
     "node": ">=18.0.0"
